--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,35 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
+  flutter_riverpod: ^3.0.3
+  riverpod_annotation: ^3.0.3
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  cloud_firestore: ^6.1.0
+  firebase_storage: ^13.0.4
+  google_generative_ai: ^0.4.7
+  drift: ^2.29.0
+  sqlite3_flutter_libs: ^0.5.40
+  go_router: ^17.0.0
+  dio: ^5.9.0
+  cached_network_image: ^3.4.1
+  image_picker: ^1.2.1
+  flutter_tts: ^4.2.3
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
+  google_fonts: ^6.3.2
+  fpdart: ^1.2.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.7.1
+  freezed: ^3.2.3
+  json_serializable: ^6.11.1
+  riverpod_generator: ^3.0.3
+  drift_dev: ^2.29.0
+  mocktail: ^1.0.4
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
