--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_storage: ^13.0.4
   google_sign_in: ^6.2.1
   google_generative_ai: ^0.4.7
+  flutter_dotenv: ^5.2.1
   drift: ^2.29.0
   sqlite3_flutter_libs: ^0.5.40
   go_router: ^17.0.0
@@ -88,6 +89,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/stories/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
