--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.0
   shared_preferences: ^2.3.3
+  flutter_animate: ^4.5.2
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
